@@ -3,6 +3,8 @@ Revision history for Perl extension PGXN::API
 0.11.1
       - Requests should now all be returned with an appropriate
         `Content-Length` header.
+      - Added the `userlist` URI template and the code to generate the user
+        lists to Indexer. It's set off at the end of a sync.
 
 0.11.0  2011-04-13T02:25:37
       - Fixed the search API to throw a 400 for invalid queries: Missing
